@@ -1,6 +1,30 @@
 # Enterprise Scale & Loom Idioms
 
-This document captures architectural traps, JVM edge cases, and missing links that appear when moving from a **working prototype** to **millions of requests at sustained throughput**. Use it alongside the README blueprint and when implementing `LoadTestService`.
+This document captures architectural traps, JVM edge cases, and missing links that appear when moving from a **working prototype** to **millions of requests at sustained throughput**. Use it alongside the README and when extending `LoadTestService`.
+
+---
+
+## Current engine (baseline)
+
+Already in place:
+
+| Goal | Mechanism | Status |
+|------|-----------|--------|
+| Avoid OS thread-pool thinking on Loom | One virtual thread per task | **Done** |
+| Avoid lock contention on results | Pre-sized `AtomicReferenceArray` indexed by task id | **Done** |
+| No task buffer required | List-driven fan-out — no `BlockingQueue` | **Done** |
+| Cap concurrent in-flight work | `Semaphore(concurrencyLimit)` | **Done** |
+| Shared client / connection reuse | Singleton HTTP/2 `HttpClient` bean | **Done** |
+| Transport Strategy | `RequestExecutor` + `HttpRequestExecutor` | **Done** |
+| Response body safety | 64 KB cap + non-2xx → `FAILED` | **Done** (basic) |
+| Avoid heap pressure on large payloads | Claim Check — tokens in list; stream at send | Planned |
+| Simulate steady load | Token-bucket / target RPS | Planned |
+| Live telemetry without blocking workers | `LongAdder` + lock-free ring buffer | Planned |
+| Detect carrier pinning | `-Djdk.tracePinnedThreads=full` in test runs | Ops practice |
+| Load-balance across target IPs | JVM DNS cache TTL | Ops practice |
+| Stable benchmark numbers | JIT warm-up cycle before measured run | Planned |
+| Loom gold standard | Stateless VTs + shared immutable context | **Mostly done** (explicit injection) |
+| Implicit run metadata on deep stacks | `ScopedValue` | Planned if needed |
 
 ---
 
@@ -44,18 +68,18 @@ Risks:
 2. **Double lifecycle management** — `fanInGate.await()` plus `executor.close()` both wait for completion; easy to get ordering wrong.
 3. **Wrong abstraction for Loom** — virtual threads are cheap; use **one virtual thread per task**, not a fixed pool of pollers.
 
-**Fix (Loom-idiomatic):**
+**Fix (Loom-idiomatic) — this is what the codebase does:**
 
 ```text
 For each payload:
-  executor.submit(() -> execute one task → write results[taskId] → countDown latch)
+  semaphore.acquire()
+  executor.submit(() -> execute one task → write results[taskId] → release → countDown)
 
 Main thread:
-  enqueue all submissions (optionally paced)
   await latch (totalTasks)
 ```
 
-Concurrency is controlled by **how many tasks you submit** and/or a **semaphore / rate limiter**, not by a fixed number of polling workers.
+Concurrency is controlled by a **semaphore** and/or a **rate limiter**, not by a fixed number of polling workers.
 
 ---
 
@@ -68,10 +92,11 @@ In a traditional multi-threaded system, a **`BlockingQueue`** buffers tasks beca
 Virtual threads are cheap enough that the **data collection itself drives the loop**. The main execution thread walks a flat `List<String>` (from `LoadTestRequest.payloads()`) and submits one virtual thread per index:
 
 ```text
-Traditional (platform threads):     Loom (target):
+Traditional (platform threads):     Loom (implemented):
 ─────────────────────────────       ─────────────────────────────
 Producer → BlockingQueue → Workers  for (i = 0; i < n; i++)
-           (buffer)                      executor.submit(() -> run task i)
+           (buffer)                      semaphore.acquire()
+                                         executor.submit(() -> run task i)
 ```
 
 | | `BlockingQueue` model | List + one VT per item |
@@ -81,9 +106,9 @@ Producer → BlockingQueue → Workers  for (i = 0; i < n; i++)
 | **Complexity** | Poll loops, timeouts, worker lifecycle races | Simple `for` loop + `submit` |
 | **Backpressure** | Bounded queue blocks producer | `Semaphore`, pacing, or batched submission |
 
-**Backpressure without a queue:** use `Semaphore(concurrencyLimit)` before `submit`, a token-bucket pace before each submit, or submit in batches for millions of tasks — do not reintroduce a queue unless you have a specific streaming producer with no upfront list.
+**Backpressure without a queue:** use `Semaphore(concurrencyLimit)` before `submit` (**done**), a token-bucket pace before each submit (**planned**), or submit in batches for millions of tasks — do not reintroduce a queue unless you have a specific streaming producer with no upfront list.
 
-The `Task` record remains useful as an **internal concept** (id + payload ref) but you do not need a queue to hand them off — bind id from the loop index and pass payload ref into the lambda directly.
+The `Task` record remains useful as an **internal concept** (id + payload ref) but the engine does not enqueue it — bind id from the loop index and pass the payload into the lambda directly.
 
 ---
 
@@ -104,7 +129,7 @@ Common pinning sources in load testers:
 
 **1. Update logging frameworks**
 
-Ensure **Logback** and **Log4j2** are on versions whose appenders and core paths use **`ReentrantLock`** (or other non-pinning primitives) instead of **`synchronized`** on I/O-heavy code paths. Spring Boot 3.x / 4.x parent POMs generally pull recent versions — verify after upgrades.
+Ensure **Logback** and **Log4j2** are on versions whose appenders and core paths use **`ReentrantLock`** (or other non-pinning primitives) instead of **`synchronized`** on I/O-heavy code paths. Spring Boot 4.x parent POMs generally pull recent versions — verify after upgrades.
 
 | Action | Detail |
 |--------|--------|
@@ -114,13 +139,11 @@ Ensure **Logback** and **Log4j2** are on versions whose appenders and core paths
 
 **2. Detect pinning instantly during testing**
 
-Run the JVM with pinning tracing enabled in **dev, CI, and pre-production load tests**:
-
 ```bash
 java -Djdk.tracePinnedThreads=full -jar target/scale-testing-platform-*.jar
 ```
 
-When a virtual thread pins, the JVM prints a **stack trace to stderr** showing exactly which `synchronized` block or native call caused it. Fix or upgrade those call sites before claiming “zero context-switch overhead.”
+When a virtual thread pins, the JVM prints a **stack trace to stderr** showing exactly which `synchronized` block or native call caused it.
 
 | Flag | Purpose |
 |------|---------|
@@ -129,9 +152,9 @@ When a virtual thread pins, the JVM prints a **stack trace to stderr** showing e
 
 **3. Other mitigations**
 
-- Use `java.net.http.HttpClient` (Loom-friendly for HTTP).
+- Use `java.net.http.HttpClient` (already the outbound transport via `HttpRequestExecutor`).
 - Keep logging out of the innermost per-request loop where possible.
-- Re-run a short load test with tracing after **every dependency upgrade** (logging, drivers, HTTP clients).
+- Re-run a short load test with tracing after **every dependency upgrade**.
 
 **Pre-flight:** A clean run with `-Djdk.tracePinnedThreads=full` under representative load is a **gate** before benchmark numbers are trusted.
 
@@ -141,32 +164,13 @@ When a virtual thread pins, the JVM prints a **stack trace to stderr** showing e
 
 > **Loom gold standard:** Make virtual threads **entirely stateless**. Each task body should only use **local variables** plus references to **shared, immutable context** (injected `HttpClient`, captured `URI`, `ScopedValue`-bound run metadata). No per-VT mutable fields, no `ThreadLocal`, no hidden thread-owned state.
 
-To inject context and dependencies into millions of virtual threads **without copying data**, you have two primary approaches. For the **core scale engine**, prefer explicit injection; reserve `ScopedValue` for lightweight run metadata on deep call stacks.
+The core engine already follows **explicit parameter injection**:
 
-**What “stateless virtual thread” means in practice:**
+1. `HttpClient` is a singleton `@Bean` in `config/HttpClientConfig`.
+2. `HttpRequestExecutor` receives it via constructor; `LoadTestService` receives `RequestExecutor` via constructor.
+3. Virtual-thread lambdas capture task locals (`taskId`, `payload`) and call the shared executor — no `ThreadLocal`.
 
-| Virtual thread holds | Shared immutable context |
-|---------------------|---------------------------|
-| Local `taskId`, payload ref, response scratch | `HttpClient`, `RequestExecutor` (injected once) |
-| Nothing after the lambda returns | `RunContext` via `ScopedValue` (run id, read-only flags) |
-| ❌ Instance fields on worker objects | ❌ `ThreadLocal` parsers, clients, buffers |
-
-**Do not use `ThreadLocal`** — on platform-thread pools it reused expensive objects “per worker.” With millions of virtual threads that model breaks down:
-
-- A `ThreadLocal` is **per thread** — one slot per virtual thread → **massive memory overhead** if each VT gets its own parser, buffer, or client.
-- Virtual threads mount/unmount on **carrier** threads; `ThreadLocal` does not give you a cheap “pool of 8 heavy objects for 8 carriers” without custom carrier-scoped pooling.
-- Libraries that stash state in `ThreadLocal` can behave poorly or leak under extreme VT counts.
-
----
-
-#### 1. The cleanest way: explicit parameter injection (core engine)
-
-For your **core scale engine**, the **highest-performance pattern** is:
-
-1. Instantiate heavy, **thread-safe** dependencies (`HttpClient`, `RequestExecutor`, `ResponseValidator`) **once** at the application root (`config/` beans or `LoadTestService` constructor).
-2. Pass them as **immutable references** into each virtual thread’s execution block — constructor injection, method parameters, or **lambda capture**.
-
-No implicit lookup. No per-thread slots. One shared object, millions of readers.
+#### 1. Explicit parameter injection (implemented)
 
 ```java
 // config/HttpClientConfig.java — created once at application root
@@ -175,113 +179,45 @@ HttpClient httpClient() {
     return HttpClient.newBuilder()
             .version(HttpClient.Version.HTTP_2)
             .connectTimeout(Duration.ofSeconds(10))
+            .followRedirects(HttpClient.Redirect.NEVER)
             .build();
 }
 
-// service/LoadTestService.java — injected once, passed into every VT
+// services/LoadTestService.java — injected once, used by every VT
 @Service
 public class LoadTestService {
 
-    private final HttpClient httpClient;
     private final RequestExecutor requestExecutor;
 
-    public LoadTestService(HttpClient httpClient, RequestExecutor requestExecutor) {
-        this.httpClient = httpClient;
+    public LoadTestService(RequestExecutor requestExecutor) {
         this.requestExecutor = requestExecutor;
     }
 
     public LoadTestResponse run(LoadTestRequest request) throws InterruptedException {
-        List<String> payloads = request.payloads();
-        AtomicReferenceArray<TestResponse> results = new AtomicReferenceArray<>(payloads.size());
-        CountDownLatch done = new CountDownLatch(payloads.size());
-
-        try (ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor()) {
-            for (int i = 0; i < payloads.size(); i++) {
-                final int taskId = i;
-                final String payloadRef = payloads.get(i);
-                final URI targetUri = request.targetUri(); // immutable capture
-
-                // Explicit capture — httpClient & requestExecutor are shared, not copied
-                executor.submit(() -> {
-                    try {
-                        String body = resolvePayload(payloadRef);
-                        String reply = requestExecutor.send(httpClient, targetUri, body);
-                        results.set(taskId, new TestResponse(taskId, TestStatus.SUCCESS, reply));
-                    }
-                    catch (Exception e) {
-                        results.set(taskId, new TestResponse(taskId, TestStatus.FAILED, e.getMessage()));
-                    }
-                    finally {
-                        done.countDown();
-                    }
-                });
-            }
-            done.await();
-        }
-        return aggregate(results);
+        // list-driven fan-out + semaphore + AtomicReferenceArray — see source
     }
 }
 ```
 
-| Dependency | Pattern |
-|------------|---------|
-| `HttpClient` | Single `@Bean`; capture in lambda |
-| `RequestExecutor`, `ResponseValidator` | Constructor inject into `@Service` |
-| `ObjectMapper` (if needed) | Single immutable instance; pass explicitly |
-| Per-task data (`taskId`, `payloadRef`) | `final` locals captured by lambda |
-| Per-task mutable buffers | Local variables inside the lambda body only |
+| Dependency | Pattern | Status |
+|------------|---------|--------|
+| `HttpClient` | Single `@Bean` | **Done** |
+| `RequestExecutor` | Constructor inject into `@Service` | **Done** |
+| Per-task data (`taskId`, `payload`) | `final` locals captured by lambda | **Done** |
+| `ResponseValidator` | Constructor inject | Planned |
+| `ObjectMapper` (if needed) | Single immutable instance; pass explicitly | N/A today |
 
-This is **explicit sharing**: one client, many virtual threads, HTTP/2 connection reuse — not carrier pooling magic.
+#### 2. `ScopedValue` — implicit immutable context (planned if needed)
 
-**Why this wins for throughput:** zero indirection on the hot path, no `ThreadLocal.get()`, no scope lookup, no duplicate heavy objects — just a captured reference already on the stack when the VT runs.
+When **lightweight run metadata** must flow down a **deep call stack** (trace id, run id, read-only flags) and parameter drilling becomes noisy, use **`ScopedValue`** — **not** for `HttpClient` or parsers.
 
----
-
-#### 2. `ScopedValue` — implicit immutable context (secondary)
-
-When **lightweight run metadata** must flow down a **deep call stack** (trace id, run id, read-only flags) and parameter drilling becomes noisy, use **`ScopedValue`** — **not** for `HttpClient` or parsers:
-
-```java
-private static final ScopedValue<RunContext> RUN = ScopedValue.newInstance();
-
-public LoadTestResponse run(LoadTestRequest request, HttpClient httpClient) {
-    RunContext ctx = new RunContext(request.targetUri(), runId);
-    return ScopedValue.where(RUN, ctx).call(() -> executeAllTasks(request, httpClient));
-}
-
-// Deep in the stack — no parameter drilling, no ThreadLocal
-private void validateResponse(String body) {
-    URI target = RUN.get().targetUri();
-    // ...
-}
-```
-
-**Why `ScopedValue` is ideal for Project Loom:**
-
-| | `ThreadLocal` | `ScopedValue` |
-|---|---------------|---------------|
-| **Memory model** | One copy (or slot) **per thread** — millions of virtual threads → millions of slots or duplicated heavy objects | **Zero data duplication** — child virtual threads read from a **single shared immutable** value bound to the parent execution scope |
-| **Lifecycle** | Lives until manually `remove()`’d or the thread dies — easy to **leak** in thread pools and under VT churn | **Automatic cleanup** — invisible and eligible for GC the moment the bounding `ScopedValue.where(...).call(...)` block closes |
-| **Loom fit** | Designed for scarce platform threads; breaks down at VT scale | Designed for **structured, scoped** context across mounted/unmounted virtual threads |
-
-**Zero data duplication:** Instead of each virtual thread creating or inheriting its own copy of run metadata, every child VT in the scope reads the **same** immutable `RunContext` (or trace id, target URI snapshot) bound when the run starts. One object, millions of readers — no per-thread heap slot.
-
-**Automatic garbage collection:** `ThreadLocal` requires discipline — call `.remove()` in `finally` blocks or risk **permanent memory leaks** when threads are pooled or recycled. With `ScopedValue`, the binding is tied to a **lexical scope**. When `ScopedValue.where(RUN, ctx).call(...)` returns, the binding is gone; the context record is collected like any other unreachable object. No manual cleanup in worker `finally` blocks.
-
-Additional properties:
-
-- Designed for **immutable** context bound to a **dynamic scope** (a block of execution), not “one bag per thread forever.”
-- Works cleanly when virtual threads unmount/remount on carriers — context travels with the **scope**, not the carrier thread.
-- Use for **small immutable records** (`RunContext`, correlation id) — not for `HttpClient` or parsers (pass those explicitly).
-
-**When to use which:**
+**Do not use `ThreadLocal`** for heavy objects under millions of virtual threads — one slot per VT → heap bloat and leak risk without `.remove()`.
 
 | Need | Use |
 |------|-----|
-| **`HttpClient`, executors, validators (core engine)** | **Explicit parameter injection / lambda capture** — highest performance |
+| **`HttpClient`, executors, validators (core engine)** | **Explicit parameter injection / lambda capture** |
 | Run-scoped metadata on deep stacks (run id, trace id) | `ScopedValue` |
 | Mutable per-task buffers | Local variables in the task body |
-| Legacy “one parser per thread” | Refactor to shared immutable parser; pass explicitly |
 
 #### Anti-patterns to avoid
 
@@ -292,29 +228,28 @@ executor.submit(() -> HttpClient.newHttpClient().send(...));
 // BAD — ThreadLocal parser under millions of VTs
 private static final ThreadLocal<ObjectMapper> MAPPER = ThreadLocal.withInitial(ObjectMapper::new);
 
-// GOOD — shared client, explicit capture
-executor.submit(() -> send(httpClient, uri, body));
+// GOOD — shared client behind RequestExecutor (current code)
+executor.submit(() -> requestExecutor.send(targetUri, payload));
 ```
 
 ---
 
 ## 2. Structural blind spots
 
-### Coordinated pacing (rate limiting)
+### Coordinated pacing (rate limiting) — planned
 
-**Problem:** Max-out execution fires requests as fast as the NIC allows — useful for peak stress, useless for “exactly 5,000 RPS steady state.”
+**Problem:** Max-out execution fires requests as fast as the NIC (and semaphore) allow — useful for peak stress, useless for “exactly 5,000 RPS steady state.”
 
 **What's needed:** A **token bucket** or **paced scheduler** before task submission:
 
 ```text
 for each task:
   rateLimiter.acquire()   // blocks virtual thread cheaply until token available
+  inFlight.acquire()
   executor.submit(...)
 ```
 
-Implementation sketch: `AtomicLong` next permit time, or Guava `RateLimiter`, or a simple lock-free bucket with `LongAdder` refill. Place in `service/` — `RateLimiter` / `PacingStrategy` interface (Strategy pattern).
-
-Config example:
+Implementation sketch: `AtomicLong` next permit time, Guava `RateLimiter`, or a simple lock-free bucket. Place in `services/` — `RateLimiter` / `PacingStrategy` interface (Strategy pattern).
 
 ```yaml
 scale-testing:
@@ -322,9 +257,11 @@ scale-testing:
     target-rps: 5000        # 0 = unlimited (max-out)
 ```
 
+Today only `concurrencyLimit` (semaphore) is available.
+
 ---
 
-### Claim Check — the memory leak paradox
+### Claim Check — the memory leak paradox — planned
 
 Your architecture says heavy payloads (raw images, binary fragments) should flow as **lightweight tokens**, not bulk heap objects. Two common mistakes break this — **both** cause failure at scale:
 
@@ -336,17 +273,11 @@ If `payloads.get(i)` is a **token** (file path, S3 key, claim-check id) but the 
 HttpRequest.BodyPublishers.ofString(metadata)
 ```
 
-you POST the **token string** to the target API (`"file:///data/img-001.bin"`), not the image bytes. The API receives garbage; the test is invalid.
+you POST the **token string** to the target API (`"file:///data/img-001.bin"`), not the image bytes.
 
 #### Failure mode B: raw data in the list — no real Claim Check
 
-If `metadata` **is** the full payload (multi-MB JSON, base64 image, etc.), you are **not** using Claim Check. You stored millions of heavy strings in `LoadTestRequest.payloads()` (or historically a `LinkedBlockingQueue`). Result:
-
-```text
-millions of large String / byte[] on heap  →  OOM + GC heap fragmentation
-```
-
-Even without a queue, **the list itself** becomes the memory bomb if entries are full payloads.
+If entries **are** full multi-MB payloads, the list itself becomes the memory bomb.
 
 | What you pass | What happens |
 |---------------|--------------|
@@ -355,8 +286,6 @@ Even without a queue, **the list itself** becomes the memory bomb if entries are
 
 #### What's missing: worker-level resolution
 
-The **list holds lightweight reference tokens only**. Inside the virtual thread execution block, the worker **resolves** the token and **streams** heavy bytes directly into the HTTP client — disk, object store, or off-heap `ByteBuffer` — **without** loading megabytes into the heap first.
-
 ```text
 List / LoadTestRequest     →  "claim://payload-001"     (small token)
 Virtual thread (at send)  →  payloadStore.open(ref)     (stream / mmap / ByteBuffer)
@@ -364,66 +293,29 @@ HttpClient                →  BodyPublishers.ofFile(path) or custom BodyPublish
 Target API                →  receives actual bytes
 ```
 
-**Correct patterns:**
-
-```java
-// Small inline JSON (v1 — fine for smoke tests)
-BodyPublishers.ofString("{\"event\":\"ping\"}")
-
-// Claim Check — stream from disk (heap stays small)
-Path path = payloadStore.resolvePath(payloadRef);
-BodyPublishers.ofFile(path)
-
-// Claim Check — stream from store / off-heap (advanced)
-BodyPublisher publisher = payloadStore.openStreamingBody(payloadRef);
-// reads in chunks; never materialize full byte[] for large assets
-```
-
-**Implementation pieces (Phase 5):**
-
-| Piece | Role |
-|-------|------|
-| `model/PayloadRef` | Typed token (path, key, id) — optional; `String` ok early |
-| `service/PayloadStore` | Interface: `resolvePath`, `openStream`, `openBodyPublisher` |
-| `service/FilePayloadStore` | Local file adapter |
-| Virtual thread lambda | Resolve **at send time**; stream to `HttpClient` |
-
-```java
-executor.submit(() -> {
-    // Resolve HERE — not when building LoadTestRequest, not in the list
-    HttpRequest.BodyPublisher body = payloadStore.bodyPublisher(payloadRef);
-    HttpRequest request = HttpRequest.newBuilder()
-            .uri(targetUri)
-            .POST(body)
-            .build();
-    httpClient.send(request, HttpResponse.BodyHandlers.ofString());
-});
-```
-
 **Phase guidance:**
 
 | Phase | Payloads |
 |-------|----------|
-| **Step 2** (now) | Small inline JSON strings in list — acceptable for learning |
-| **Step 5** | Tokens in list + `PayloadStore` + streaming body publishers |
+| **Now** | Small inline JSON strings in list — acceptable for learning / smoke |
+| **Later** | Tokens in list + `PayloadStore` + streaming body publishers |
 | **Never at scale** | Multi-MB strings in `payloads` or `ofString(token)` for file refs |
 
-Add `service/PayloadStore` (interface) + `FilePayloadStore` adapter when you move beyond inline JSON strings. See [Design Patterns](./design-patterns.md) § Claim Check.
+Add `services/PayloadStore` (interface) + `FilePayloadStore` adapter when you move beyond inline JSON. See [Design Patterns](./design-patterns.md) § Claim Check.
 
 ---
 
-### Real-time metrics vs final report
+### Real-time metrics vs final report — planned
 
 **Problem:** `AtomicReferenceArray` is ideal for **per-task final results** indexed by id. It is **not** ideal for live RPS, P99 latency, or error histograms — scanning the array under load is expensive.
 
 **What's needed:**
 
-| Concern | Structure |
-|---------|-----------|
-| Global success/failure | `LongAdder` |
-| Current RPS | `LongAdder` + time window or striped counters |
-| Latency samples | Bounded **ring buffer** (MPMC) consumed by telemetry thread |
-| Final per-task report | `AtomicReferenceArray<TestResponse>` (keep this) |
+| Concern | Structure | Status |
+|---------|-----------|--------|
+| Final success/failure counts | Aggregated after latch | **Done** |
+| Live RPS / latency | `LongAdder` + ring buffer | Planned |
+| Final per-task report | `AtomicReferenceArray<TestResponse>` | **Done** |
 
 Optional: Observer / SSE controller reads from ring buffer without touching workers (see [Design Patterns](./design-patterns.md)).
 
@@ -435,11 +327,9 @@ These sit **outside** your Java concurrency model but will invalidate results or
 
 ### DNS resolution caching
 
-**Problem:** The JVM caches DNS lookups (`InetAddress`). Default TTL can be long (or “forever” in some security-manager configs). During a load test against a hostname behind a load balancer, **all traffic may pin to a single resolved IP** — you are not testing the real fleet, and you can overload one backend node.
+**Problem:** The JVM caches DNS lookups. During a load test against a hostname behind a load balancer, **all traffic may pin to a single resolved IP**.
 
 **Fix:**
-
-- Set JVM network cache properties for load-test runs:
 
 ```bash
 java \
@@ -450,14 +340,8 @@ java \
 
 | Property | Effect |
 |----------|--------|
-| `networkaddress.cache.ttl=0` | Re-query DNS when cache entry expires (0 = always refresh on lookup semantics — verify in your JDK docs) |
+| `networkaddress.cache.ttl=0` | Re-query DNS when cache entry expires (verify semantics in your JDK docs) |
 | `networkaddress.cache.negative.ttl=0` | Do not long-cache failed lookups |
-
-**Platform options:**
-
-- Document required JVM flags in runbooks / README
-- Optional `config/JvmDnsProperties` note in `application.yaml` comments (flags must be set at JVM launch, not Spring properties)
-- For lab tests against a **single** IP, caching may be fine — make behavior **configurable** per profile (`smoke` vs `distributed-target`)
 
 **Caution:** `ttl=0` increases DNS traffic; acceptable for controlled load tests, not necessarily for 24/7 production clients.
 
@@ -465,64 +349,34 @@ java \
 
 ### OS ephemeral port exhaustion
 
-**Problem:** Each new TCP connection consumes an **ephemeral outbound port** on the load-generator host. At millions of rapid short-lived connections, the OS runs out of ports or accumulates sockets in `TIME_WAIT` — throughput collapses even if the JVM is perfect.
-
-Symptoms:
-
-- `ConnectException`, `Cannot assign requested address`, rising error rate under max-out
-- `ss -s` / `netstat` showing huge `TIME_WAIT` counts
+**Problem:** Each new TCP connection consumes an **ephemeral outbound port**. At millions of rapid short-lived connections, the OS runs out of ports or accumulates sockets in `TIME_WAIT`.
 
 **Fixes (combine where possible):**
 
-| Approach | What to do |
-|----------|------------|
-| **HTTP/2 multiplexing** | Share one `HttpClient` bean; many requests over **few connections** |
-| **Connection reuse** | Do not create a new `HttpClient` per request; keep-alive enabled |
-| **Limit new connections** | Semaphore on in-flight + reuse pools |
-| **OS tuning** (load-gen host) | Widen ephemeral range (`ip_local_port_range`), tune `tcp_tw_reuse` / `tcp_fin_timeout` per your OS policy |
-| **Target-side** | Ensure server supports HTTP/2 if you rely on multiplexing |
+| Approach | What to do | Status |
+|----------|------------|--------|
+| **HTTP/2 multiplexing** | Share one `HttpClient` bean; many requests over few connections | **Done** (client configured for HTTP/2) |
+| **Connection reuse** | Do not create a new `HttpClient` per request | **Done** |
+| **Limit new connections** | Semaphore on in-flight | **Done** |
+| **OS tuning** (load-gen host) | Widen ephemeral range; tune `TIME_WAIT` per OS policy | Runbook |
 
-`HttpClient` HTTP/2 (default when server supports it):
-
-```java
-HttpClient.newBuilder()
-    .version(HttpClient.Version.HTTP_2)  // prefer HTTP/2
-    .connectTimeout(Duration.ofSeconds(10))
-    .build();
-```
-
-**Architecture:** Inject a **singleton** `HttpClient` in `config/HttpClientConfig.java` — never `newHttpClient()` inside the per-task loop.
-
-Document OS tuning in runbooks; do not hard-code sysctl changes in application code.
+`HttpClientConfig` already prefers HTTP/2 with a 10s connect timeout and never follows redirects.
 
 ---
 
-### JIT warm-up cycles
+### JIT warm-up cycles — planned
 
-**Problem:** The first N thousand requests run on **interpreted / C1-compiled** bytecode. Latency and throughput during that phase are **not representative** of steady-state performance. Publishing benchmark numbers without warm-up is misleading.
+**Problem:** The first N thousand requests run on **interpreted / C1-compiled** bytecode. Latency and throughput during that phase are **not representative**.
 
 **Fix:** Run a **throwaway warm-up phase** before the measured run:
 
 ```text
 Phase 1 — Warm-up (discarded)
   ~10,000 requests (or until latency stabilizes)
-  Same code paths: HTTP, serialization, validation, metrics
 
 Phase 2 — Measured run
   Record metrics only from this phase
-  Return LoadTestResponse from measured phase only
 ```
-
-**Implementation sketch** in `LoadTestService`:
-
-```java
-if (request.warmupRequests() > 0) {
-    runWarmup(request, httpClient); // results discarded; may use subset of payloads cyclically
-}
-return runMeasured(request, httpClient);
-```
-
-Config example:
 
 ```yaml
 scale-testing:
@@ -531,17 +385,11 @@ scale-testing:
     use-same-target: true
 ```
 
-**Tips:**
-
-- Warm-up should hit the **same** `targetUri`, payload shape, and headers as the real test
-- Optionally wait for JIT settle: stop warm-up when rolling P99 variance drops below a threshold (advanced)
-- Log warm-up duration separately; never mix warm-up samples into `LoadTestResponse`
+Warm-up should hit the **same** `targetUri` and payload shape as the real test. Never mix warm-up samples into `LoadTestResponse`.
 
 ---
 
-## 4. Recommended engine shape (refactored)
-
-Aligns with Project Loom, Claim Check, pacing, and safe fan-in:
+## 4. Recommended engine shape (aligns with current code + next features)
 
 ```java
 public LoadTestResponse run(LoadTestRequest request) throws InterruptedException {
@@ -550,29 +398,26 @@ public LoadTestResponse run(LoadTestRequest request) throws InterruptedException
 
     AtomicReferenceArray<TestResponse> results = new AtomicReferenceArray<>(totalTasks);
     CountDownLatch done = new CountDownLatch(totalTasks);
-    RunMetrics metrics = new RunMetrics(); // LongAdder + optional latency ring
+    Semaphore inFlight = new Semaphore(request.concurrencyLimit());
+    // RunMetrics metrics = new RunMetrics(); // planned: LongAdder + latency ring
 
     try (ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor()) {
         for (int i = 0; i < totalTasks; i++) {
             final int taskId = i;
             final String payloadRef = payloads.get(i);
 
-            pacingStrategy.acquire(); // no-op if unlimited
+            // pacingStrategy.acquire(); // planned
+            inFlight.acquire();
 
             executor.submit(() -> {
-                long start = System.nanoTime();
                 try {
-                    String body = payloadStore.resolve(payloadRef); // or stream via publisher
-                    String reply = requestExecutor.send(request.targetUri(), body);
-                    // validate + truncate reply (see response-validation.md)
-                    results.set(taskId, new TestResponse(taskId, TestStatus.SUCCESS, reply));
-                    metrics.recordSuccess(System.nanoTime() - start);
-                }
-                catch (Exception e) {
+                    // payloadStore.resolve / stream — planned for Claim Check
+                    TestResponse result = executeTask(taskId, request.targetUri(), payloadRef);
+                    results.set(taskId, result);
+                } catch (Exception e) {
                     results.set(taskId, new TestResponse(taskId, TestStatus.FAILED, e.getMessage()));
-                    metrics.recordFailure(System.nanoTime() - start);
-                }
-                finally {
+                } finally {
+                    inFlight.release();
                     done.countDown();
                 }
             });
@@ -580,36 +425,37 @@ public LoadTestResponse run(LoadTestRequest request) throws InterruptedException
         done.await();
     }
 
-    return aggregate(results, metrics);
+    return aggregate(results);
 }
 ```
 
 **Concurrency control options:**
 
-| Mode | How |
-|------|-----|
-| Max-out | Submit all tasks immediately (millions → consider batching submission) |
-| Fixed parallelism | `Semaphore(concurrencyLimit)` before `executor.submit` |
-| Target RPS | `pacingStrategy.acquire()` per submission |
+| Mode | How | Status |
+|------|-----|--------|
+| Max-out | High `concurrencyLimit` | Possible today |
+| Fixed parallelism | `Semaphore(concurrencyLimit)` | **Done** |
+| Target RPS | `pacingStrategy.acquire()` per submission | Planned |
 
 ---
 
 ## 5. Implementation roadmap (scale features)
 
-| Phase | Feature | Doc |
-|-------|---------|-----|
-| **Step 2** | One virtual thread per task + `CountDownLatch(totalTasks)` | This doc §1 |
-| **Step 2** | Shared singleton `HttpClient` (connection reuse) | This doc §3 |
-| **Step 2** | Response size caps | [Response Validation](./response-validation.md) |
-| **Step 3** | `RequestExecutor` Strategy + mock adapter; shared `HttpClient` bean | [Design Patterns](./design-patterns.md) |
-| **Step 3** | Explicit dependency pass-in; no `ThreadLocal` for clients/parsers | This doc §1 |
-| **Step 4** | Pacing / token bucket | This doc §2 |
-| **Step 5** | Claim Check + `PayloadStore` | This doc §2 |
-| **Step 6** | `LongAdder` metrics + ring buffer telemetry | This doc §2 |
-| **Step 7** | JIT warm-up phase (discarded) before measured run | This doc §3 |
-| **Step 8** | Pinning detection in CI / local profile | This doc §1 |
-| **Step 9** | Failure policies / circuit breaker | [Failure Policies](./failure-policies.md) |
-| **Ops** | JVM DNS cache flags + OS port tuning runbook | This doc §3 |
+| Phase | Feature | Status | Doc |
+|-------|---------|--------|-----|
+| **Step 2** | One VT per task + `CountDownLatch(totalTasks)` | **Done** | This doc §1 |
+| **Step 2** | Shared singleton `HttpClient` (HTTP/2) | **Done** | This doc §3 |
+| **Step 2** | Response size caps + non-2xx | **Done** (basic) | [Response Validation](./response-validation.md) |
+| **Step 3** | `RequestExecutor` Strategy + adapter | **Done** | [Design Patterns](./design-patterns.md) |
+| **Step 3** | Explicit dependency pass-in; no `ThreadLocal` | **Done** | This doc §1 |
+| **Step 3+** | Extract `ResponseValidator`; content-type / suspicious checks | Planned | [Response Validation](./response-validation.md) |
+| **Step 4** | Pacing / token bucket | Planned | This doc §2 |
+| **Step 5** | Claim Check + `PayloadStore` | Planned | This doc §2 |
+| **Step 6** | `LongAdder` metrics + ring buffer telemetry | Planned | This doc §2 |
+| **Step 7** | JIT warm-up phase (discarded) before measured run | Planned | This doc §3 |
+| **Step 8** | Pinning detection in CI / local profile | Ops | This doc §1 |
+| **Step 9** | Failure policies / circuit breaker | Planned | [Failure Policies](./failure-policies.md) |
+| **Ops** | JVM DNS cache flags + OS port tuning runbook | Ops | This doc §3 |
 
 ---
 
@@ -617,25 +463,24 @@ public LoadTestResponse run(LoadTestRequest request) throws InterruptedException
 
 Use before claiming a run is “enterprise ready”:
 
-- [ ] **Loom model** — one virtual thread per task; latch = `totalTasks`
+- [x] **Loom model** — one virtual thread per task; latch = `totalTasks`
 - [ ] **Pinning** — `-Djdk.tracePinnedThreads=full` clean on a short run
 - [ ] **DNS** — `networkaddress.cache.ttl=0` when target is a load-balanced hostname
-- [ ] **Connections** — singleton `HttpClient`; HTTP/2 where supported; no per-request client
-- [ ] **Stateless VTs** — task lambdas use locals + shared immutable refs only; no `ThreadLocal` or per-VT mutable state
-- [ ] **No ThreadLocal** — heavy objects injected or passed explicitly; `ScopedValue` only for immutable run context
+- [x] **Connections** — singleton `HttpClient`; HTTP/2 where supported; no per-request client
+- [x] **Stateless VTs** — task lambdas use locals + shared immutable refs only; no `ThreadLocal`
 - [ ] **Ports** — monitor `TIME_WAIT`; OS ephemeral range documented if max-out
 - [ ] **Warm-up** — 10k (or configured) throwaway requests before measured phase
 - [ ] **Pacing** — target RPS set if steady-state required
-- [ ] **No BlockingQueue** — list-driven fan-out; one virtual thread per payload index
-- [ ] **Claim Check** — tokens in list; resolve and stream at send; large bodies not held on heap
-- [ ] **Responses** — body size capped; suspicious content flagged
+- [x] **No BlockingQueue** — list-driven fan-out; one virtual thread per payload index
+- [ ] **Claim Check** — tokens in list; resolve and stream at send
+- [x] **Responses** — body size capped; non-2xx failed *(suspicious content still planned)*
 - [ ] **Failure policy** — smoke vs stress abort rules configured
 
 ---
 
 ## 7. What the original README blueprint was
 
-The original **fixed worker pool + `LinkedBlockingQueue` + `fanInGate(concurrencyLimit)`** pattern reflected **platform-thread scarcity** — a queue buffered work because you could not afford one thread per task. That design is **deprecated** for this project.
+The original **fixed worker pool + `LinkedBlockingQueue` + `fanInGate(concurrencyLimit)`** pattern reflected **platform-thread scarcity**. That design is **deprecated** for this project and is **not** what the code does.
 
 Keep the lessons:
 
@@ -643,18 +488,18 @@ Keep the lessons:
 - Virtual threads for blocking I/O
 - Claim Check — lightweight references, heavy data resolved at send
 
-Replace entirely:
+Replace entirely (done in code for the queue/pool side):
 
 - **`BlockingQueue` / `Task` queue handoff** → iterate `List` directly
 - **Fixed polling workers** → one virtual thread per list index
 - **Latch per worker count** → `CountDownLatch(totalTasks)`
-- **Resolve payloads at send time** for Claim Check
+- **Resolve payloads at send time** for Claim Check *(still planned)*
 
 ---
 
 ## Related docs
 
-- [MVC Structure](./mvc-structure.md) — where engine code lives (`service/`)
+- [MVC Structure](./mvc-structure.md) — where engine code lives (`services/`)
 - [Design Patterns](./design-patterns.md) — Strategy, Claim Check, Observer
 - [Response Validation](./response-validation.md)
 - [Failure Policies](./failure-policies.md)
